# python_confighandler

./: .pre-commit-config.yaml  LICENSE  README.md  buildspec.yml  conf.schema  pyproject.toml  requirements_dev.txt  setup.py  test.py  wuff.conf
confighandler/: __init__.py
confighandler/reader/: json.py
