[tool.black]
line-length = 80
target-version = ["py39"]
paths = ["confighandler", "tests"]

[tool.vulture]
ignore_names = ["context", "*_mock"]
make_whitelist = true
min_confidence = 80
paths = ["confighandler", "tests"]
sort_by_size = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python_confighandler"
version = "0.2.4"
authors = [
    { name="Johannes Eimer", email="johannes.eimer@jep-dev.com" },
]
description = "Python Confighandler"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ['Confighandler', 'Python']
dependencies = [
]

[tool.hatch.build.targets.sdist]
include = ["confighandler"]

[tool.hatch.build.targets.wheel]
package = ["confighandler"]
